# task

./: .gitignore  Cargo.toml  build.rs  diesel.toml  tasks.db
.sqlx/: query-04ca51526e7193445286f5b98133a15174ef878ed2c0b92af38658275567f800.json  query-699e8ed6202056d0a96e39af4250d58a765e0264e08f62d327cd7aa8136b97ba.json  query-b9bc52615c06ab994cb88800bfa180c32a4b68f0c6c4cfdc16c6dd78a5180377.json  query-bc363fbfd6ddb5bc5ad4cf3e01ad28b8cb2c0147e71222b1aab383926244ccba.json  query-d48896f22b434fa3298e08255f68e8eab42f98ae45a8bcead4fdf659227fb49f.json  query-d5f38ce9d5314351af6b76ae7b7d2a866b1e8422a802226b3f8fd5b190a01184.json
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  task.rs
migration/src/: lib.rs  m20240728_000001_create_task_table.rs
migrations/: 20240728011750_create_task_table.down.sql  20240728011750_create_task_table.up.sql
migrations/2024-07-24-042803_create_tasks_table/: down.sql  up.sql
sql/: add_task.sql  completed_tasks.sql  incomplete_tasks.sql
sql/migrations/: create_tasks_table.sql
src/: commands.rs  domain.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  sqlite.rs  task_repository.rs
src/database/: mod.rs  task_repository.rs
