[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["Jake Hathaway <jake.d.hathaway@gmail.com>"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
serde = {version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "0.29.0", features = ["bundled"] }
diesel = { version = "2.2.2", features = ["chrono", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }



