[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["Jake Hathaway <jake.d.hathaway@gmail.com>"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
serde = {version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.7"
async-std = {version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.81"
dirs = "5.0.1"

[dependencies.sqlx]
version = "0.8.0"
features = ["sqlite", "macros", "runtime-async-std", "derive", "migrate", "chrono"]

[profile.dev.package.sqlx-macros]
opt-level = 3
